<resources>
    <string name="app_name">LPlayer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="artists">Исполнители</string>
    <string name="genres">Жанры</string>
    <string name="tracks">Треки</string>
    <string name="albums">Альбомы</string>
    <string name="playlists">Плейлисты</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title_activity_eq">EqActivity</string>
    <string name="title_activity_quite">QuiteActivity</string>

</resources>
